# javascript-minecraft-clone

./: .dockerignore  .gitignore  ACHIEVEMENTS.md  BRANCHES.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.server  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_RUST.md  README_SERVER.md  RUST_SUMMARY.md  build.sh  launcher_config.json  package.json  pterodactyl-egg.json  pterodactyl_egg.json  start_server.sh  vite.config.js
.github/workflows/: build-server-image.yml  docker-publish.yml
client/: app.js  check-build-setup.js  generate-icon.js  index.html  main.js  package.json  settings.js  shader-manager.js  styles.css  texture-generator.js  texture-manager.js  ui.js  voxel.js  webpack.config.js
client/src/: main.js
client/src/engine/: player.js  renderer.js
client/src/network/: client.js
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MODDING.md  build-executables.md  modding.md  pterodactyl-setup.md
mods/: example.rhai  ruby-mod.js
pterodactyl/: egg.json
server/: config.json  index.js  package.json  server.js  webpack.config.js
server/network/: server.js
server/plugins/: plugin-manager.js
server/plugins/plugins-data/example-plugin/: main.js  plugin.json
server/world/: chunk.js  generator.js  world.js
shared/: constants.js  mod-manager.js  package.json  webpack.config.js  world.js
shared/blocks/: registry.js
shared/constants/: game.js
shared/protocol/: packets.js
src/: inventory.rs  lib.rs  main.rs  mods.rs  server.rs  ui.rs
src/input/: mod.rs
src/net/: client.rs  client_impl.rs  mod.rs  protocol.rs
src/renderer/: advanced.rs  camera.rs  mod.rs  renderer.rs  shader.wgsl  shadow.wgsl  texture.rs
src/settings/: mod.rs
src/world/: block.rs  chunk.rs  mod.rs
